--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "element-plus": "^1.0.1-alpha.16",
+    "boxicons": "^2.0.9",
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.1-alpha.16",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
